@@ -1,3 +1,4 @@
+	* add missing min_memory_usage() and high_performance_seed() settings presets to python
 	* fix stat cache issue that sometimes would produce incorrect resume data
 	* storage optimization to peer classes
 	* fix torrent name in alerts of builds with deprecated functions
